--- a/react-protoPFeedback/src/style.css
+++ b/react-protoPFeedback/src/style.css
@@ -1,23 +1,52 @@
-#imageGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+#birdKind {
+    font-size: 20px;
+    color: #333333;
 }
 
 .image-item {
     width: 150px;
     height: 150px;
     cursor: pointer;
-    transition: transform 0.3s ease;
-    border: 2px solid transparent;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    border: 5px solid transparent;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
 }
 
 .image-item:hover {
-    transform: scale(1.05);
+    transform: scale(1.1);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    border-color: #4CAF50;
 }
 
 .image-item.selected {
-    border: 2px solid #4CAF50;
+    border: 5px solid #4CAF50; /* Zielona ramka */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5); /* Mocniejszy cień */
+    transform: scale(1.1); /* Większe skalowanie */
 }
+
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 10px;
+    justify-items: center;
+    margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+    .image-item {
+        width: 120px;
+        height: 120px;
+    }
+}
+
+@media (max-width: 480px) {
+    .image-item {
+        width: 100px;
+        height: 100px;
+    }
+}
+
 
 /*background picture settings*/
 body {
@@ -54,25 +83,38 @@ body {
     color: #555555;
 }
 
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-.action-button {
-    flex: 1;
-    padding: 10px;
-    margin: 0 10px;
+#submit-button {
+    font-size: 22px;
+    padding: 10px 50px;
     background-color: #4CAF50;
     color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.action-button {
+    font-size: 18px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
 }
 
 .action-button:hover {
     background-color: #45a049;
+    transform: scale(1.05);
 }
 
 /*Login page*/
@@ -229,14 +271,6 @@ body {
     margin-top: 10px;
 }
 
-.image-item {
-    width: 150px;
-    height: 150px;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-    border: 2px solid transparent;
-}
-
 .white-box button {
     font-size: 18px;
     padding: 10px 20px;
@@ -280,6 +314,29 @@ select {
     font-size: 16px;
     cursor: pointer;
 }
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.button-container button {
+    font-size: 18px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: #ffffff;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    cursor: pointer;
+}
+
+.button-container button:hover {
+    background-color: #45a049;
+    transform: scale(1.08);
+}
+
 
 /* Arrow indicator for select (using background image) */
 select {
@@ -302,7 +359,23 @@ select:focus {
     left: 0;
     color: #fff;
     margin-bottom: 30px;
-    width: 100%; 
+    margin-top: 5px;
+    width: 100%;
+    /*background: rgba(52, 179, 225, 0.51);*/
+}
+.header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.header ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
 }
 
 .header a {
@@ -316,14 +389,25 @@ select:focus {
     background-color: #ffffff;
     padding: 10px;
     border-radius: 8px;
-    margin: -18px 10px 0 10px; /* space between header buttons */
-    display: inline-block;
+    margin: 0 10px; /* Adjust spacing between header buttons */
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.white-box-header a {
+    text-decoration: none;
+    color: #3498db;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.white-box-header:hover {
+    transform: scale(1.05);
 }
 
 .sign-out {
-    float: right;
+    margin-left: auto;
 }
-
 
 
 /*result page*/
@@ -341,7 +425,7 @@ select:focus {
     text-align: left;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: 2px solid #4CAF50;
-    margin-top: 150px;
+    width: fit-content;
 }
 
 .center-container {
@@ -349,7 +433,6 @@ select:focus {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin-right: 30%
 }
 
 .title {
@@ -361,8 +444,64 @@ select:focus {
 
 .scrollable-table {
     max-height: 700px;
-    width: 650px;
+    width: 100%;
     overflow-y: auto;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    overflow-x: auto;
+}
+
+.results-table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.results-table th,
+.results-table td {
+    border: none;
+    padding: 12px 15px;
+    text-align: left;
+    transition: background-color 0.3s ease;
+}
+
+.results-table th {
+    background: linear-gradient(120deg, #6dca90 0%, #7fb1cd 100%);
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.results-table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.results-table tr:nth-child(odd) {
+    background-color: #f1f1f1;
+}
+
+.results-table tr:hover {
+    background-color: #d1e7dd;
+}
+
+.results-table tr:first-child th:first-child {
+    border-top-left-radius: 8px;
+}
+
+.results-table tr:first-child th:last-child {
+    border-top-right-radius: 8px;
+}
+
+.results-table tr:last-child td:first-child {
+    border-bottom-left-radius: 8px;
+}
+
+.results-table tr:last-child td:last-child {
+    border-bottom-right-radius: 8px;
 }
 
 .next-button {
@@ -376,4 +515,126 @@ select:focus {
     font-size: 18px;
     padding: 10px 20px;
     color: red;
+}
+
+/* Overlay and spinner */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loading-spinner {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.content-container {
+    min-height: 100vh;
+}
+
+.loading .content-container {
+    filter: blur(2px);
+}
+
+#results-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 20px;
+}
+
+/* radio buttons style */
+.radio-group {
+    flex-direction: column;
+    width: fit-content;
+    justify-items: center;
+}
+
+.radio-group label {
+    gap: 5px;
+    cursor: pointer;
+    align-items: center;
+    text-align: start;
+    margin-bottom: 10px;
+}
+
+.radio-group input[type="radio"] {
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #4CAF50;
+    border-radius: 50%;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.radio-group input[type="radio"]:checked {
+    background-color: #4CAF50;
+    border-color: #4CAF50;
+}
+
+.radio-group input[type="radio"]:checked::after {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: rgba(106, 211, 143, 0);
+    margin: auto;
+}
+
+#white-results-box {
+    background-color: #ffffff;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+    justify-content: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Custom styles for SweetAlert2 */
+.my-popup {
+    font-size: 18px;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+.my-title {
+    font-size: 24px;
+    color: #333;
+}
+
+
+
+.my-confirm-button {
+    background-color: #4CAF50;
+    color: #ffffff;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.my-confirm-button:hover {
+    background-color: #45a049;
 }
