style changes for pages excluding history page

--- a/src/main/resources/templates/PictureSelection.html
+++ b/src/main/resources/templates/PictureSelection.html
@@ -14,6 +14,7 @@
             <div class="white-box-header"><a href="/home">Home</a></div>
             <div class="white-box-header"><a href="/about-us">About Us</a></div>
             <div class="white-box-header"><a href="/history">History</a></div>
+            <div class="white-box-header sign-out"><a href="/logout">Sign Out</a></div>
         </ul>
     </nav>
 </div>
@@ -30,7 +31,9 @@
             <br/>
             <div id="birdsImagesGrid" class="image-grid"></div>
             <input type="hidden" id="selectedImageUrl" name="selectedImageUrl" value="">
-            <button type="submit">Submit</button>
+            <div class="button-container">
+                <button id="submit-button" type="submit">Submit</button>
+            </div>
         </form>
     </div>
 </div>
