--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8"/>
     <title>Login Page</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </head>
 <body>
 <div class="login-container">
@@ -15,8 +19,10 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required/>
         <br/>
-        <button type="submit">Login</button>
+        <div class="button-container">
+            <button type="submit">Login</button>
+        </div>
     </form>
-    </div>
+</div>
 </body>
 </html>
