--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -21,9 +21,11 @@
             <label for="confirmPassword">Confirm Password:</label>
             <input type="password" id="confirmPassword" name="confirmPassword" required/>
             <br/>
-            <button type="submit">Register</button>
+            <div class="button-container">
+                <button id="register-button" type="submit">Register</button>
+            </div>
         </form>
-        <p>Already have an account? <a href="/login">Login</a></p>
+        <p id="login-text">Already have an account? <a href="/login">Login</a></p>
     </div>
 </body>
 </html>
