--- a/src/main/resources/templates/AboutUs.html
+++ b/src/main/resources/templates/AboutUs.html
@@ -13,6 +13,8 @@
         <ul>
             <div class="white-box-header"><a href="/home">Home</a></div>
             <div class="white-box-header"><a href="/picture-selection">Bird Selection</a></div>
+            <div class="white-box-header"><a href="/history">History</a></div>
+            <div class="white-box-header sign-out"><a href="/logout">Sign Out</a></div>
         </ul>
     </nav>
 </div>
@@ -28,4 +30,9 @@
 </div>
 
 </body>
+<style>
+    .welcome-box p {
+        font-size: 18px;
+    }
+</style>
 </html>
