--- a/src/main/resources/templates/History.html
+++ b/src/main/resources/templates/History.html
@@ -19,7 +19,7 @@
 
 <h1>History</h1>
 
-<div class="results-container">
+<div id="results-container-history" class="results-container">
     <!-- Sorting Menu -->
     <div class="left-container">
         <div id="analysis-history" class="analysis-box">
