--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -23,6 +23,7 @@
             <button type="submit">Login</button>
         </div>
     </form>
+    <p id="login-text">Don't have an account? <a href="/register">Sign up</a></p>
 </div>
 </body>
 </html>
